[package]
name = "relay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "canota",
  "canota-sys",
  "roboteq_test",
  "CAN-Device-Sim"
]

[dependencies]
json = "0.12.4"
chrono = "0.4.19"
byteorder = "1.4.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
socketcan = { version = "1.7.0" }
